--- a/src/configs/Languages/fa/FaTranslation.json
+++ b/src/configs/Languages/fa/FaTranslation.json
@@ -8,7 +8,7 @@
   "help": "کمک",
   "language": "زبان",
   "more": "بیشتر",
-  "categories": "دسته بندی ها",
+  "categories": "دسته بندی",
   "currency": "ريال",
   "viewmore": "مشاهده",
   "pieces": "تکه",
