--- a/src/configs/Languages/en/EnTranslation.json
+++ b/src/configs/Languages/en/EnTranslation.json
@@ -64,5 +64,7 @@
   "sellrate":"Most demands",
   "mostpopular":"Most Popular",
   "cityfilter":"city filter",
-  "buffet":"Buffet"
+  "buffet":"Buffet",
+  "group":"Group",
+  "allgroups":"All groups"
 }
